# bazel_go

./: .gitignore  BUILD.bazel  LICENSE  WORKSPACE  deps.bzl  go.mod  go.sum
example/: BUILD.bazel  example.go  example_test.go
